--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 <div class="bg-light py-5">
   <div class="container text-center">
     <h2 class="mb-4">Sẵn sàng quản lý bữa ăn cho học sinh?</h2>
-    <a href="{% url 'meals:meal_create' %}" class="btn btn-lg btn-outline-primary">Nhập Dữ liệu Bữa Ăn Ngay</a>
+    <a href="{% url 'meals:meal_bulk_create' %}" class="btn btn-lg btn-outline-primary">Nhập Dữ liệu Bữa Ăn Ngay</a>
   </div>
 </div>
 {% endblock %}
