--- a/meals/templates/payments/student_payment_form.html
+++ b/meals/templates/payments/student_payment_form.html
@@ -54,7 +54,7 @@
 
     <!-- Field ảo: Tiền tháng trước -->
     <div class="form-group">
-        <label for="id_prev_month_balance">Tiền tháng trước</label>
+        <label for="id_prev_month_balance">Công nợ</label>
         {{ form.prev_month_balance }}
     </div>
     <!-- Field ảo: Tiền tháng này -->
